<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Pass</string>
    <string name="input_password_or_fingerprint_hint">Touch sensor or input password</string>
    <string name="settings">Settings</string>
    <string name="app_usage_hint">Pass is a password generator to help you generate relatively safety password easily.\nPass can only generate password instead of store password. So if you forgot your master password, we can\'t recover it for you.\nYour are the most important part for your safety. Please take care of your safety anytime in your life. We wish to help you get both simplicity and safety, but absolute safety is not guaranteed.</string>
    <string name="domain">Domain</string>
    <string name="password">Password</string>
    <string name="set_salt">Set salt</string>
    <string name="enhanced_security">Enhanced security</string>
    <string name="advanced">Advanced</string>
    <string name="password_generator_type">Password generator type</string>
    <string name="sgp_md5_name">SuperGenPass (MD5)</string>
    <string name="sgp_sha512_name">SuperGenPass (SHA-512)</string>
    <string name="pw_composer_name">Password Composer</string>
    <string name="remember_master_password">Remember master password</string>
    <string name="password_length">Password length</string>
    <string name="remember_password_pattern_lock_notice">You can use pattern to encrypt and remember your master password. Please note that pattern lock is not secure as strong password.\n\nIt\'s not suggested to use pattern lock if your device was rooted (or bootloader unlocked) because your master password is vulnerable to brute-force attack on such devices.\n\nAfter 5 error attempts, pattern lock will be cleared, then you will have to use your master password.</string>
    <string name="remember_password_fingerprint_lock_notice">You can use fingerprint to encrypt and remember your master password.\n\nPlease note that fingerprint is not secure as strong password.</string>
    <string name="master_password">Master password</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="empty_password">Empty password</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="draw_pattern">Draw pattern</string>
    <string name="pattern_confirm_hint">Confirm your pattern</string>
    <string name="pattern_not_match_hint">Pattern not match</string>
    <string name="pattern_password_cleared">Pattern password cleared</string>
    <string name="internal_error">Internal error</string>
    <string name="pattern_lock">Pattern lock</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="copy_password">Copy password</string>
    <string name="copy_pin">Copy pin</string>
    <string name="fingerprint_not_supported">Fingerprint not supported</string>
    <string name="no_fingerprint_enrolled"><![CDATA[Fingerprint hasn\'t set up, go to Settings -> Secure -> Fingerprint to set up a fingerprint.]]></string>
    <string name="pin_length">PIN length</string>
    <string name="scan_fingerprint_hint">Touch scanner</string>
    <string name="copied_password_validity">Copied password validity</string>
    <string name="clear_copied_password_automatically">Clear copied password automatically</string>
    <string name="password_copied">Password copied</string>
    <string name="pin">PIN</string>
    <string name="fingerprint_not_recognized">Couldn\'t recognize you</string>
    <string name="no_input_domain_hint">Domain name required</string>
    <string name="input_password_hint">Input password</string>
    <string name="unsupported_tag">Unsupported tag</string>
    <string name="unregistered_tag">Unregistered tag</string>
    <string name="pro_features">Pro feature</string>
    <string name="nfc_tags">NFC tags</string>
    <string name="add_card">Add card</string>
    <string name="host">Host</string>
    <string name="name">Name</string>
    <string name="accessibility_password_hint">Click to generate password</string>
    <string name="password_helper_service_description">Password input helper</string>
    <string name="copied_password">Copied password</string>
    <string name="past_manually_hint">Automatic filling is not supported in this screen, paste password instead.</string>
    <string name="auto_fill_passwords">Auto fill passwords</string>
    <string name="tag_name_prefix">Tag <xliff:g id="name">%s</xliff:g></string>
    <string name="info">Info</string>
    <string name="password_confirm">Password confirm</string>
    <string name="password_not_match">Password not match</string>
    <string name="include_special_characters">Include special characters</string>
</resources>
