<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <org.mariotaku.pass.view.RememberMasterPasswordContainer
        android:id="@+id/view_pages"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:inAnimation="@android:anim/slide_in_left">

        <ScrollView
            android:id="@+id/remember_password_notice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_pageController="org.mariotaku.pass.view.controller.RememberPasswordFingerprintNoticeController">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/element_spacing_normal"
                android:text="@string/remember_password_fingerprint_lock_notice"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="?android:textColorPrimary"/>
        </ScrollView>

        <FrameLayout
            android:id="@+id/remember_input_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_pageController="org.mariotaku.pass.view.controller.RememberPasswordInputController">

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/element_spacing_normal"
                android:hint="@string/master_password"
                android:inputType="textPassword"/>
        </FrameLayout>

        <RelativeLayout
            android:id="@+id/remember_password_fingerprint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_pageController="org.mariotaku.pass.view.controller.RememberPasswordFingerprintController">

            <TextView
                android:id="@+id/fingerprint_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/fingerprint_icon"
                android:layout_marginBottom="@dimen/element_spacing_normal"
                android:gravity="center"
                android:padding="@dimen/element_spacing_normal"
                android:text="@string/scan_fingerprint_hint"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="?android:colorAccent"/>

            <ImageView
                android:id="@+id/fingerprint_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_fp_40px"/>
        </RelativeLayout>
    </org.mariotaku.pass.view.RememberMasterPasswordContainer>

    <LinearLayout
        style="?android:buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:layout_weight="0"
        android:orientation="horizontal"
        tools:ignore="NestedWeights">

        <Button
            android:id="@+id/previous"
            style="?android:buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/previous"/>

        <Button
            android:id="@+id/next"
            style="?android:buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/next"/>
    </LinearLayout>
</LinearLayout>